clusters/cluster-1/core/cilium/cilium-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ingress
  namespace: kube-system
  annotations:
        #kubernetes.io/tls-acme: "true"
    # type of authentication
    #nginx.ingress.kubernetes.io/auth-type: basic
    # prevent the controller from redirecting (308) to HTTPS
    #nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    # name of the secret that contains the user/password definitions
    #nginx.ingress.kubernetes.io/auth-secret: nginx-secret
    # message to display with an appropriate context why the authentication is required
    #nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required '
    # custom max body size for file uploading like backing image uploading
    #nginx.ingress.kubernetes.io/proxy-body-size: 10000m
spec:
  ingressClassName: internal-nginx
  rules:
  - host: hubble.tallflix.ca
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hubble-ui
            port:
              number: 80
